<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/user_profile_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/profile_icon"
            android:tint="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_border"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/username_icon"
                    app:srcCompat="@drawable/baseline_account_box_white_24" />

                <TextView
                    android:id="@+id/username_lbl"
                    style="@style/profileTextStyleLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usernameTitle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineHorizontal" />

            <TextView
                android:id="@+id/username_txt"
                style="@style/profileTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/email_icon"
                    app:srcCompat="@drawable/baseline_email_white_24" />

                <TextView
                    android:id="@+id/email_lbl"
                    style="@style/profileTextStyleLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailTitle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineHorizontal" />

            <TextView
                android:id="@+id/email_txt"
                style="@style/profileTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/gender_img"
                    app:srcCompat="@drawable/baseline_wc_black_24" />

                <TextView
                    android:id="@+id/gender_lbl"
                    style="@style/profileTextStyleLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genderTitle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineHorizontal" />

            <TextView
                android:id="@+id/gender_txt"
                style="@style/profileTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/age_icon"
                    app:srcCompat="@drawable/baseline_cake_white_24" />

                <TextView
                    android:id="@+id/age_lbl"
                    style="@style/profileTextStyleLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ageTitle" />
            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineHorizontal" />

            <TextView
                android:id="@+id/age_txt"
                style="@style/profileTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>